--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   angular: ^5.3.0
   angular_components: ^0.13.0
+  http: ^0.12.0+2
+  date_format: ^1.0.6
 
 dev_dependencies:
   angular_test: ^2.3.0
